<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="setting">Setting</string>
    <string name="user">User</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="changepassword">Change Password</string>
    <string name="show_password">Show Password</string>


    <string name="app_name">MyUIT Air</string>
    <string name="yellow" translatable="false">Yellow</string>
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_chart">Chart</string>
    <string name="title_more">More</string>
    <string name="location">HOUSTON, TX</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="background" translatable="false">background</string>
    <string name="date">Sunday, Sep 19, 2023</string>
    <string name="title_co2">CO2</string>
    <string name="title_temp">Temp</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_pm">PM2.5</string>
    <string name="select_attr">Select Attribute</string>
    <string name="select_tf">Timeframe</string>
    <string name="select_date">Ending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string-array name="list_alert_title">
        <item>Good morning</item>
        <item>Good afternoon</item>
        <item>Good evening</item>
        <item>Good night</item>
        <item>Good bye</item>
    </string-array>
    <string name="title_activity_graph" translatable="false">activity_graph</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to MyUIT Air!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_btn">Login</string>
    <string name="login_google_btn">Login with Google</string>
    <string name="or">OR</string>
    <string name="create_account">Create your account</string>
    <string name="app_introduction">MyUIT Air provides you many useful information to help you have a great day. Let\'s get started!</string>
    <string name="register">Register</string>
    <string name="rspw">Reset your password</string>
    <string name="register_introduction">Register an MyUIT account to start experiencing all features and benefit</string>
    <string name="rspw_introduction">Enter your email and password to reset your password</string>
    <string name="email">Email address</string>
    <string name="create_password">Create a Password</string>
    <string name="new_password">Enter new Password</string>
    <string name="confirm_password">Confirm your Password</string>
    <string name="confirm_new_password">Confirm your new Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="level">MODERATOR</string>
    <string name="last_updated_time">3 MIN AGO</string>
    <string name="time_weather">Sunday | 10:08 AM</string>
    <string name="weather_temperature">25°</string>
    <string name="weather_status">Mostly Cloudy</string>
    <string name="last_updated_list">18sec ago</string>
    <string name="air_quality_status">High Pollen Concentrations</string>
    <string name="login">Login</string>
    <string name="login_introduction">Login with your MyUIT account to start experiencing all features and benefit</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
</resources>