<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="Authentication.LoginActivity">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="#03A9F4"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_introduction"
        android:textColor="@color/main_full_light"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_email_address"
        android:drawableEnd="@drawable/baseline_alternate_email_24"
        android:drawablePadding="25dp"
        android:drawableTint="#38C374"
        android:hint="@string/email_or_username"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/main_full_light" />

    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_email_address"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:drawableTint="#38C374"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/main_full_light" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="#38C374" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_login_bg"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="16sp"
        app:backgroundTint="#38C374" />



    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textStyle="normal"
        android:textColor="#38C374"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_account"
            android:textColor="@color/main_full_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="#03A9F4"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>