<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rspassword_content"
    tools:context="Authentication.ResetPassWordScreen">
    <WebView
        android:id="@+id/webviewrs"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </WebView>


    <TextView
        android:id="@+id/rspw_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/rspw"
        android:textColor="#03A9F4"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/text_lorem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rspw_text"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/rspw_introduction"
        android:textColor="@color/main_full_light"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/text_lorem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_email_address"
        android:drawableEnd="@drawable/baseline_alternate_email_24"
        android:drawablePadding="25dp"
        android:drawableTint="@color/main_green"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/main_full_light" />
    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/edt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_email_address"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:drawableTint="@color/main_green"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/main_full_light" />
    <EditText
        android:id="@+id/edt_newpass"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/edt_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_email_address"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:drawableTint="@color/main_green"
        android:hint="@string/new_password"
        android:inputType="textWebPassword"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/main_full_light" />

    <EditText
        android:id="@+id/edt_cpass"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@+id/edt_newpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_email_address"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:drawableTint="@color/main_green"
        android:hint="@string/confirm_new_password"
        android:inputType="textWebPassword"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/main_full_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/edt_cpass"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_cpass"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_login_bg"
            android:text="@string/back"
            android:textAllCaps="true"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="#38C374" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_cpass"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_login_bg"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="#38C374" />


    </LinearLayout>



</RelativeLayout>